--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,28 @@
 buildscript {
     repositories {
-        mavenCentral()
+        jcenter()
+        maven { url "https://plugins.gradle.org/m2/" }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:1.0.0'
+        classpath 'com.android.tools.build:gradle:1.3.1'
+        classpath "gradle.plugin.me.tatarka:gradle-retrolambda:3.2.3"
     }
 }
 
 allprojects {
     repositories {
-        mavenCentral()
+        jcenter()
     }
+}
+
+task clean(type: Delete) {
+    delete rootProject.buildDir
+}
+
+ext {
+    compileSdkVersion = 23
+    targetSdkVersion = 23
+    minSdkVersion = 15
+    buildToolsVersion = '23.0.1'
+    supportLibsVersion = '23.0.1'
 }
