--- a/disk-restapi-sdk/build.gradle
+++ b/disk-restapi-sdk/build.gradle
@@ -45,11 +45,10 @@ dependencies {
     compile 'com.google.code.gson:gson:2.3.1'
     compile 'com.squareup.okhttp:okhttp:2.3.0'
     compile 'com.squareup.okio:okio:1.6.0'
-    compile 'org.slf4j:slf4j-api:1.7.10'
 
-    testCompile 'org.slf4j:slf4j-simple:1.7.10'
     testCompile 'junit:junit:4.11'
     testCompile 'org.hamcrest:hamcrest-all:1.3'
+    testCompile "org.robolectric:robolectric:3.0"
     testCompile 'com.google.guava:guava:18.0'
 }
 
