--- a/disk-restapi-sdk/build.gradle
+++ b/disk-restapi-sdk/build.gradle
@@ -41,10 +41,8 @@ android {
 
 dependencies {
     compile 'com.android.support:appcompat-v7:' + supportLibsVersion
-    compile 'com.squareup.retrofit:retrofit:1.9.0'
-    compile 'com.google.code.gson:gson:2.3.1'
-    compile 'com.squareup.okhttp:okhttp:2.3.0'
-    compile 'com.squareup.okio:okio:1.6.0'
+    compile 'com.squareup.retrofit:retrofit:2.0.0-beta2'
+    compile 'com.squareup.retrofit:converter-gson:2.0.0-beta2'
 
     testCompile 'junit:junit:4.11'
     testCompile 'org.hamcrest:hamcrest-all:1.3'
