--- a/build.gradle
+++ b/build.gradle
@@ -1,17 +1,17 @@
 buildscript {
     repositories {
         jcenter()
-        maven { url "https://plugins.gradle.org/m2/" }
+        google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:1.3.1'
-        classpath "gradle.plugin.me.tatarka:gradle-retrolambda:3.2.3"
+        classpath 'com.android.tools.build:gradle:3.1.2'
     }
 }
 
 allprojects {
     repositories {
         jcenter()
+        google()
     }
 }
 
@@ -20,9 +20,9 @@ task clean(type: Delete) {
 }
 
 ext {
-    compileSdkVersion = 23
-    targetSdkVersion = 23
+    compileSdkVersion = 27
+    targetSdkVersion = 27
     minSdkVersion = 15
-    buildToolsVersion = '23.0.1'
-    supportLibsVersion = '23.0.1'
+    buildToolsVersion = '27.0.3'
+    supportLibsVersion = '27.1.1'
 }
