--- a/disk-restapi-sdk/build.gradle
+++ b/disk-restapi-sdk/build.gradle
@@ -1,5 +1,4 @@
 apply plugin: 'com.android.library'
-apply plugin: 'me.tatarka.retrolambda'
 apply plugin: 'maven'
 apply plugin: 'signing'
 
@@ -40,14 +39,14 @@ android {
 }
 
 dependencies {
-    compile 'com.android.support:appcompat-v7:' + supportLibsVersion
-    compile 'com.squareup.retrofit:retrofit:2.0.0-beta2'
-    compile 'com.squareup.retrofit:converter-gson:2.0.0-beta2'
+    implementation 'com.android.support:appcompat-v7:' + supportLibsVersion
+    implementation 'com.squareup.retrofit2:retrofit:2.4.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
 
-    testCompile 'junit:junit:4.11'
-    testCompile 'org.hamcrest:hamcrest-all:1.3'
-    testCompile "org.robolectric:robolectric:3.0"
-    testCompile 'com.google.guava:guava:18.0'
+    testImplementation 'junit:junit:4.12'
+    testImplementation 'org.hamcrest:hamcrest-all:1.3'
+    testImplementation 'org.robolectric:robolectric:3.8'
+    testImplementation 'com.google.guava:guava:22.0'
 }
 
 group = 'com.yandex.android'
