Migrate to AndroidX

--- a/disk-restapi-sdk/build.gradle
+++ b/disk-restapi-sdk/build.gradle
@@ -39,7 +39,7 @@ android {
 }
 
 dependencies {
-    implementation 'com.android.support:appcompat-v7:' + supportLibsVersion
+    implementation 'androidx.annotation:annotation:1.1.0'
     implementation 'com.squareup.retrofit2:retrofit:2.4.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
 
