--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,7 +30,8 @@ repositories {
 }
 
 dependencies {
-    implementation 'com.android.support:appcompat-v7:' + supportLibsVersion
+    implementation 'androidx.appcompat:appcompat:1.1.0'
+
     implementation 'com.facebook.stetho:stetho:1.5.0'
     implementation 'com.facebook.stetho:stetho-okhttp3:1.5.0'
     implementation project(':disk-restapi-sdk')
