--- a/disk-restapi-sdk/build.gradle
+++ b/disk-restapi-sdk/build.gradle
@@ -7,11 +7,12 @@ repositories {
 }
 
 android {
-    compileSdkVersion rootProject.ext.compileSdkVersion
+    compileSdkVersion 28
 
     defaultConfig {
-        minSdkVersion rootProject.ext.minSdkVersion
-        targetSdkVersion rootProject.ext.targetSdkVersion
+        minSdkVersion 15
+        targetSdkVersion 28
+
         versionCode 1
         versionName "1.0"
     }
